feat: new BYOK AI
